--- a/project.config.json
+++ b/project.config.json
@@ -15,7 +15,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "2.9.0",
 	"appid": "wx160fad2b3d38c570",
-	"projectname": "TEST",
+	"projectname": "2019SE",
 	"debugOptions": {
 		"hidedInDevtools": []
 	},
