--- a/wx_Client/app.json
+++ b/wx_Client/app.json
@@ -8,7 +8,8 @@
     "pages/login/login",
     "pages/userindex/userindex",
     "pages/senMessage/senMessage",
-    "pages/setting/setting"
+    "pages/setting/setting",
+    "pages/logon/logon"
   ],
   "window": {
     "backgroundTextStyle": "light",
