--- a/wx_Client/project.config.json
+++ b/wx_Client/project.config.json
@@ -23,7 +23,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.9.4",
-	"appid": "wxbbd95d6feb106ae4",
+	"appid": "wx487d2dd838a59e0e",
 	"projectname": "2019SE",
 	"debugOptions": {
 		"hidedInDevtools": []
